[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
name = "tp-db"
packages = [{include = "tp_db"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
SQLAlchemy = "^1.4.44"
python = "^3.8.1"
pytz = "^2022.6"

[tool.poetry.group.dev.dependencies]
SQLAlchemy = {extras = ["mypy"], version = "^1.4.44"}
black = "^22.10.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.10.27"
isort = "^5.10.1"
mypy = "^0.991"
pylint = "^2.15.6"
pytest = "^7.2.0"
types-pytz = "^2022.6.0.1"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
